// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`showHistory getChangeLevelContent creates correct content for level 0100 1`] = `
"ELEMENT                                                                         
"
`;

exports[`showHistory getChangeLevelContent creates correct content for level 0101 1`] = `
"ELEMENT                                                                         
LINE 2                                                                          
"
`;

exports[`showHistory getChangeLevelContent creates correct content for level 0103 1`] = `
"ELEMENT                                                                         
LINE 2                                                                          
LINE 3                                                                          
"
`;

exports[`showHistory getChangeLevelContent creates correct content for level 0104 1`] = `
"ELEMENT                                                                         
LINE 4                                                                          
LINE 5                                                                          
LINE 3                                                                          
"
`;
